--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
+* { 
+  font-family: 'Padauk', sans-serif;
+  color:#fff;
+
+}
+.font-link {
+  font-family: 'Padauk', sans-serif;
+}
 .App {
   text-align: center;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ 
+
+}
+.container-weather { 
+
+  border-radius: 25px;
+  height: 80vh;
+  width: 80vw;
+  background-color:rgba(255, 255, 255, 0.2);   
+
+
+}
+.header-title{
+  margin-top: 5vh;;
+}
+.display-4{
+  margin-top:2vh;
+}
+/*Day Card*/
+.row{
+
+  position: inherit;
+  margin-top: 10vh;
+  height: 50vh;
+  width: 85vw;
+}
+.col-sm-2 {
+  height: 250px;
+}
+.col-sm-2 .card{
+  background-color:rgba(81, 144, 195, 0.45);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.15);
+  border-style: none;
+  border-radius: 25px;
+  height: 250px;
+  overflow: wrap;
+  
+}
+.card-title{
+  margin-top: 20px;
+  margin-bottom: 0px;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-body{
+  margin-top:-10px; 
+  padding: 0px;
 }
